--- a/AppAndroid/app/src/main/AndroidManifest.xml
+++ b/AppAndroid/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HeThong"
-            android:label="Hệ Thống"
+        <activity android:name=".mua_Credit"
             android:label="Mua Credit"
             android:parentActivityName=".MainActivity">
             <meta-data
